# SpectralTricks

./: README.md  SpectralTricksSCSynths.scd
Cabal-Package/: README.md  SpectralTricks.cabal
Cabal-Package/src/Sound/Tidal/: SpectralTricks.hs
